--- a/templates/ntp-RedHat-6.conf.j2
+++ b/templates/ntp-RedHat-6.conf.j2
@@ -16,6 +16,9 @@ restrict -6 ::1
 
 # Hosts on local network are less restricted.
 #restrict 192.168.1.0 mask 255.255.255.0 nomodify notrap
+{% for r in ntp_restrict %}
+restrict {{r.network}} {{r.params}}
+{% endfor %}
 
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
